# relay-hid

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android-release.yml  debug.yml  livetest.yml
agent/: .env.example  README.md  config.py  executor.py  keymap.py  mcp_server.py  relay_client.py  requirements.txt  run.py  screen.py  stream.py
agent/providers/: anthropic.py  gemini.py
agent/tools/: agent_pointer_x11.sh  demo.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cadayn/hidinput/: HidConstants.kt  HidKeymap.kt  HidPeripheralManager.kt  HidService.kt  MainActivity.kt  RelayTileService.kt  ShareActivity.kt  WifiDiscovery.kt  WifiLink.kt
app/src/main/java/com/cadayn/hidinput/ui/: DebugOverlay.kt  Feel.kt  RelayApp.kt  RelayController.kt
app/src/main/java/com/cadayn/hidinput/ui/components/: Common.kt  RelayIcons.kt  RepeatPress.kt  SettingsControls.kt
app/src/main/java/com/cadayn/hidinput/ui/screens/: CalibrateScreen.kt  CustomizeScreen.kt  DashboardScreen.kt  KeyboardScreen.kt  OnboardingScreen.kt  PairingScreen.kt  RemoteScreen.kt  SendScreen.kt  SettingsScreen.kt
app/src/main/java/com/cadayn/hidinput/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
desktop/: 99-uinput.rules  Cargo.toml  README.md
desktop/src/: cross.rs  main.rs
docs/: PRIVACY.md  STORE_LISTING.md  architecture.md  computer-use-strategy.md  paper-notes.md  paper.md  screenstream-plan.md  trackpad-ergonomics-research.md
