[package]
name = "relay-desktop"
version = "0.2.0"
edition = "2021"
description = "Relay WiFi receiver — injects keyboard/mouse input from the Relay phone app via Linux uinput, with a local web control panel"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evdev = "0.12"
tiny_http = "0.12"

[profile.release]
strip = true
opt-level = "z"
