[package]
name = "relay-desktop"
version = "0.8.0"
edition = "2021"
description = "Relay WiFi receiver — injects keyboard/mouse input from the Relay phone app via Linux uinput, with a local web control panel, mDNS discovery and QR pairing"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evdev = "0.12"
tiny_http = "0.12"
mdns-sd = "0.11"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
base64 = "0.22"
zbus = "4"
wl-clipboard-rs = "0.8"

[profile.release]
strip = true
opt-level = "z"
